<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_200"
    tools:context=".Register">



    <Toolbar
        android:id="@+id/ActionRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hesapOlustur"
        android:background="@color/teal_700"
        />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/yazi"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/yazi"
        android:text="@string/tag"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/yazi"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/yazi"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/yazi"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/yazi"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/kayıtOl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/green"
            android:fontFamily="@font/yazi"
            android:text="@string/kayıtOl"
            android:textColor="@android:color/white" />
    </RelativeLayout>



</LinearLayout>