<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/subtitle"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/green2"
        android:fontFamily="@font/yazi"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:background="#11000000"
        android:textSize="17sp"
        android:fontFamily="@font/yazi"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_akpersonel"
        android:fontFamily="@font/yazi"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#11000000"
        android:fontFamily="@font/yazi"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/giris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/green2"
        android:fontFamily="@font/yazi"
        android:text="@string/login"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/kayıtOl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/giris"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/green2"
        android:fontFamily="@font/yazi"
        android:text="@string/kayıtOl"
        android:textColor="@android:color/black" />




</RelativeLayout>